# SpotiLeak

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start.sh
backend/: main.py  models.py  requirements.txt  routes.py
backend/services/: search_service.py
backend/tests/: test_search.py
frontend/: package-lock.json  package.json
frontend/public/: electron.js  index.html
frontend/src/: App.css  App.js  App.tsx  index.js  index.tsx
frontend/src/components/: SearchInput.tsx  TypingText.tsx
frontend/src/types/: api.tsx
src/app/: __main__.py  app.py  controller.py  models.py  ui.py
