[project]
name = "spotileak"
version = "0.1.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", 
    "yt-dlp>=2023.12.30",
    "mutagen>=1.47.0",
    "google-api-python-client>=2.108.0"
]

[tool.setuptools]
packages = ["backend"]

[build-system]
requires = ["setuptools", "wheel"]